# masters_thesis

code/apm/: .gitignore  CMakeLists.txt
code/apm/calib_camera/: CMakeLists.txt
code/apm/calib_camera/calibrate/: calib_command  calib_config.xml  calib_images.xml  galaxy_s3_169_calib.xml  galaxy_s3_169_images.xml  galaxy_s6_169_calib.xml  galaxy_s6_169_images.xml  out_camera_data.xml  out_camera_data_derp.xml
code/apm/calib_camera/calibrate/src/: calibration.cpp  imagelist_creator.cpp
code/apm/calib_camera/undistort_test/src/: undistort_test.cpp
code/apm/gui/: APMTestGui.cpp  ApmGuiMain.cpp  CMakeLists.txt  apm_test_gui.cpp
code/apm/lib/: CMakeLists.txt
code/apm/lib/include/: A4PaperFinder.h  CannyEdgeDetector.h  ContourExtractor.h  HoughLineTransform.h  Morphology.h  ObjectFinder.h  PackageFinder.h  PackageMeasurer.h  PolygonFinder.h  ReferenceObjectFinder.h  apm_util.h  disjoint_set.h  image_processing.h  image_processing_internal.h  package_detection.h  package_detection_internal.h  package_measurer.h  package_measuring.h  package_measuring_internal.h  paper_detection.h  paper_detection_internal.h
code/apm/lib/src/: A4PaperFinder.cpp  CannyEdgeDetector.cpp  ContourExtractor.cpp  HoughLineTransform.cpp  Morphology.cpp  PackageFinder.cpp  PackageMeasurer.cpp  PolygonFinder.cpp  apm_util.cpp  disjoint_set.cpp  image_processing.cpp  package_detection.cpp  package_measurer.cpp  package_measuring.cpp  paper_detection.cpp
code/apm/test/: CMakeLists.txt
code/apm/test/include/: APMTest.h  APMTestCase.h  FileUtil.h  apm_test.h  apm_test_case.h  file_util.h
code/apm/test/include/jsoncpp/: jsoncpp.cpp
code/apm/test/include/jsoncpp/json/: json.h
code/apm/test/src/: APMTest.cpp  APMTestCase.cpp  APMTestMain.cpp  APMTestRunner.cpp  apm_test.cpp  apm_test_case.cpp  apm_test_runner.cpp
code/apm/test/src/gtest/: contour_extraction_test.cpp  disjoint_set_test.cpp  package_detection_test.cpp  paper_detection_test.cpp
code/apm/test/src/test_creator/: test_creator.cpp
code/apm/test/src/test_printer/: test_printer.cpp
code/apm/test/src/test_runner/: apm_test_runner.cpp
code/apm/test/src_gtest/: A4PaperFinderTest.cpp  ContourExtractorTest.cpp  GTestRunner.cpp  PackageFinderTest.cpp  package_detection_test.cpp  paper_detection_test.cpp
code/app/: .gitignore
code/app/app/src/androidTest/java/com/apm/tobias/automaticpackagemeasuring/: ApplicationTest.java
code/app/app/src/main/: AndroidManifest.xml
code/app/app/src/main/java/com/apm/tobias/automaticpackagemeasuring/: CameraUtils.java  CaptureFragment.java  MainActivity.java  OverlayView.java  PackageMeasurer.java
code/app/app/src/main/java/com/apm/tobias/automaticpackagemeasuring/core/: Edge.java  PackageMeasurer.java  ReferenceObject.java  Vertex.java
code/app/app/src/main/jni/: Android.mk  Application.mk  apm_core  apm_jni.cpp  apm_jni.h  com_apm_tobias_automaticpackagemeasuring_core_PackageMeasurer.cpp  com_apm_tobias_automaticpackagemeasuring_core_PackageMeasurer.h
code/app/app/src/main/res/layout/: activity_capture.xml  fragment_capture.xml
code/app/app/src/main/res/values/: dimens.xml  strings.xml
report/: .gitignore  references.bib  report.tex
report/.texpadtmp/: report.bbl  report.blg
report/floats/: angles.tex  detection_by_distance.tex  detection_by_package.tex  detection_by_position.tex  detection_categories.tex  detection_categories_error.tex  detection_overall.tex  key_measure_by_height.tex  key_measure_by_package.tex  key_measure_by_position.tex  key_measure_overall.tex  measure_by_distance.tex  measure_by_package.tex  measuring_categories.tex  measuring_categories_error.tex  measuring_overall.tex  overall_categories.tex  overall_categories_error.tex  overall_good.tex  overall_overall.tex  packages.tex  perspective.tex
report/sections/: abstract.tex  abstract_swe.tex  background.tex  discussion.tex  introduction.tex  method.tex  related_work.tex  results.tex
report/sections/background/: background.tex
report/sections/discussion/: discussion.tex
report/sections/introduction/: introduction.tex
report/sections/method/: method.tex
report/sections/related_work/: related_work.tex
report/sections/results/: results.tex
report/tables/: detection_by_distance.tex  detection_by_height.tex  detection_by_package.tex  detection_by_position.tex  detection_overall.tex  key_measure_by_distance.tex  key_measure_by_height.tex  key_measure_by_package.tex  key_measure_by_position.tex  measure_by_distance.tex  measure_by_height.tex  measure_by_package.tex  measure_by_position.tex  measure_overall.tex  package_dimensions.tex
